# Master

./: CMakeLists.txt  README.md
Threads_IVQNet2/: Contingence.cpp  Contingence.hpp  Data.cpp  Data.hpp  ErrorManager.cpp  ErrorManager.hpp  Helper.hpp  NeuralNetwork.cpp  Param.cpp  Param.hpp  main.cpp
Threads_IVQNet2.xcodeproj/: CMakeLists.txt  project.pbxproj
Threads_IVQNet2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Threads_IVQNet2.xcodeproj/project.xcworkspace/xcuserdata/Andre.xcuserdatad/: UserInterfaceState.xcuserstate
Threads_IVQNet2.xcodeproj/xcuserdata/Andre.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Threads_IVQNet2.xcodeproj/xcuserdata/Andre.xcuserdatad/xcschemes/: Threads_IVQNet2.xcscheme  xcschememanagement.plist
