cmake_minimum_required(VERSION 3.9)
project(Threads_IVQNet2_xcodeproj)

set(CMAKE_CXX_STANDARD 11)

add_executable(Threads_IVQNet2_xcodeproj
        project.xcworkspace/xcuserdata/Andre.xcuserdatad/UserInterfaceState.xcuserstate
        project.xcworkspace/contents.xcworkspacedata
        xcuserdata/Andre.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
        xcuserdata/Andre.xcuserdatad/xcschemes/Threads_IVQNet2.xcscheme
        xcuserdata/Andre.xcuserdatad/xcschemes/xcschememanagement.plist
        project.pbxproj)
